deleted id param from user methods
